Switch to Vert.x